--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/listing-filter.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-filter/listing-filter.twig
@@ -1,25 +1,27 @@
-{{ attach_library('tower_health/chosen') }}
-{{ attach_library('tower_health/listFilter') }}
-<div class="filter">
-  <button aria-controls="list-filters" class="filter__toggle">
-    <span class="filter__toggle--open">Show</span><span class="filter__toggle--close">Hide</span>
-    Filters
-  </button>
-  <div id="list-filters" class="filter-grid-wrapper">
-    <div class="filter__labels">
-      <span>{{ "Filter"|t }}</span>
-      <a href="/">{{ "Clear Filters"|t }}</a>
-    </div>
-    <div class="filter__items">
-      {% block filter_items %}
-        {% for item in form_sections %}
-          {% include "@organisms/form-section/form-section.twig" with {
-            section_heading_level: null,
-            section_heading: null,
-            section_items: item.section_items
-          } %}
-        {% endfor %}
-      {% endblock %}
+{% if form_sections %}
+  {{ attach_library('tower_health/chosen') }}
+  {{ attach_library('tower_health/listFilter') }}
+  <div class="filter">
+    <button aria-controls="list-filters" class="filter__toggle">
+      <span class="filter__toggle--open">Show</span><span class="filter__toggle--close">{{ 'Hide'|t }}</span>
+      {{ 'Filters'|t }}
+    </button>
+    <div id="list-filters" class="filter-grid-wrapper">
+      <div class="filter__labels">
+        <span>{{ 'Filter'|t }}</span>
+        <a href="{{ filter_url }}">{{ 'Clear Filters'|t }}</a>
+      </div>
+      <div class="filter__items">
+        {% block filter_items %}
+          {% for item in form_sections %}
+            {% include "@organisms/form-section/form-section.twig" with {
+              section_heading_level: null,
+              section_heading: null,
+              section_items: item.section_items
+            } %}
+          {% endfor %}
+        {% endblock %}
+      </div>
     </div>
   </div>
-</div>
+{% endif %}
