TH-298 hide labels if items are empty

--- a/docroot/themes/custom/tower_health/templates/content/node--location--teaser.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--location--teaser.html.twig
@@ -75,14 +75,14 @@
     "location": {
       "img": {
         "src": src,
-        "alt": alt,
+        "alt": content.field_location_image['#items'].alt,
       },
       "details": {
         "name": label,
         "address1": address1,
         "address2": address2,
-        "phone": content.field_location_phone_number,
-        "fax": content.field_location_fax,
+        "phone": phone,
+        "fax": fax,
       },
       "link": {
         "href": href,
