--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.twig
@@ -11,15 +11,21 @@
   <div class="teaser__content">
     <div class="teaser__content__info">
       <div class="teaser__section">
-        <span class="teaser-label">Address</span>
-        <span class="teaser__row">{{ location.details.address1 }}</span>
-        <span class="teaser__row">{{ location.details.address2 }}</span>
+        {% if address1 or address2 %}
+          <span class="teaser-label">Address</span>
+          <span class="teaser__row">{{ location.details.address1 }}</span>
+          <span class="teaser__row">{{ location.details.address2 }}</span>
+        {% endif %}
       </div>
       <div class="teaser__section">
-        <span class="teaser-label">Phone</span>
-        {{ location.details.phone }}
-        <span class="teaser-label">Fax</span>
-        {{ location.details.fax }}
+        {% if location.details.phone %}
+          <span class="teaser-label">Phone</span>
+          {{ location.details.phone }}
+        {% endif %}
+        {% if location.details.fax %}
+          <span class="teaser-label">Fax</span>
+          {{ location.details.fax }}
+        {% endif %}
       </div>
     </div>
     <div class="teaser__button">
