TH-298 translate button text

--- a/docroot/themes/custom/tower_health/templates/content/node--location--teaser.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--location--teaser.html.twig
@@ -75,7 +75,7 @@
     "location": {
       "img": {
         "src": src,
-        "alt": content.field_location_image['#items'].alt,
+        "alt": alt,
       },
       "details": {
         "name": label,
@@ -86,7 +86,7 @@
       },
       "link": {
         "href": href,
-        "text": "Directions",
+        "text": "Directions"|t,
         "icon": icon,
       }
     }
