--- a/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
@@ -88,7 +88,7 @@
       },
       "link": {
         "url": url,
-        "text": "Request an Appointment",
+        "text": "Request an Appointment"|t,
         "icon": icon,
       }
     }
