--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/service-tile/service-tile.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/service-tile/service-tile.twig
@@ -1,10 +1,3 @@
-<div class="service-tile">
-  <h3 class="service-tile__title"><a href="{{ service.url }}">{{ service.name }}</a></h3>
-  {% if service.subservices %}
-  <ul class="service-tile__subservices">
-  {% for item in service.subservices %}
-    <li class="service-tile__subservice"><a href="{{ item.url }}">{{ item.name }}</a></li>
-  {% endfor %}
-  </ul>
-  {% endif %}
-</div>
+<a class="service-tile" href="{{ service.url }}">
+  <h3 class="service-tile__title">{{ service.name }}</h3>
+</a>
