--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/service-tile-listing/_service-tile-listing.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/service-tile-listing/_service-tile-listing.scss
@@ -14,12 +14,13 @@
 }
 
 .service-tile-listing__list {
+  width: 100%;
   
   @include breakpoint($bp2) {
     display: flex;
     flex-wrap: wrap;
     align-items: stretch;
-    justify-content: space-between;
+    justify-content: center;
   }
   
   .service-tile {
@@ -28,6 +29,7 @@
     @include breakpoint($bp2) {
       width: 48%;
       flex: 0 1 48%;
+      margin-right: 1%;
     }
     
     @include breakpoint($bp3) {
