TH-299 hiding label

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.twig
@@ -24,7 +24,7 @@
         {% endif %}
       </div>
       <div class="teaser__section">
-        {% if provider.details.focus %}
+        {% if provider.details.focus[0] %}
           <h3 class="teaser-label">Clinical Areas of Focus</h3>
           {{ provider.details.focus }}
         {% endif %}
