create a paragraph component for rich text

--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/layouts/grid/_grid.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/layouts/grid/_grid.scss
@@ -10,6 +10,10 @@
   @include grid;
 }
 
+.grid--sm-centered {
+  max-width: 1200px;
+}
+
 %grid-container,
 .grid-container {
   max-width: 1500px;
