--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/pager/pager.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/pager/pager.twig
@@ -39,7 +39,9 @@
           <a class="pager__link pager__link--prev"  href="{{ items.previous.href }}" title="{{ 'Go to previous page'|t }}" rel="prev"{{ items.previous.attributes|without('href', 'title', 'rel') }}>
             <span class="visually-hidden">{{ 'Previous page'|t }}</span>
             <span>
-              {% include "arrow-prev.svg" %}
+              {% if arrow_previous %}
+                {% include arrow_previous %}
+              {% endif %}
               {{ items.previous.text|default('Previous'|t) }}
             </span>
           </a>
@@ -76,7 +78,9 @@
             <span class="visually-hidden">{{ 'Next page'|t }}</span>
             <span>
               {{ items.next.text|default('Next'|t) }}
-              {% include "arrow-next.svg" %}
+              {% if arrow_next %}
+                {% include arrow_next %}
+              {% endif %}
             </span>
           </a>
         </li>
