--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
@@ -3,8 +3,8 @@
   flex-direction: column;
   justify-content: center;
   background-color: $white;
-  box-shadow: 0 4px 8px rgba($black, .25);
-  border-radius: 0 0 8px 8px;
+  box-shadow: $shadow;
+  border-radius: 0 0 $rd-brd-lg $rd-brd-lg;
   margin-bottom: 1em;
   border-top: 6px solid $trust;
 }
