--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
@@ -157,7 +157,7 @@
     border-bottom: 0;
     background-color: $primary-dark;
     padding: 2em 2em 2em 0;
-    border-radius: 0 8px 8px 0;
+    border-radius: 0 $rd-brd-lg $rd-brd-lg 0;
     margin-top: auto;
     bottom: -200px;
     
