adjust the animations

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/sidebar-card/_card--sidebar.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/sidebar-card/_card--sidebar.scss
@@ -6,3 +6,12 @@
     @include adjust-font-size-to($sm-heading, 1.15);
   }
 }
+
+.cssanimations {
+  .card.card--sidebar.in-view {
+    
+    @include breakpoint($bp2) {
+      animation: fadeInRight .5s ease .25s forwards;
+    }
+  }
+}
