--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
@@ -7,7 +7,12 @@
   border-radius: 0 0 $rd-brd-lg $rd-brd-lg;
   margin-bottom: 1em;
   border-top: 6px solid $trust;
+
+  &.card--image {
+    justify-content: flex-start;
+  }
 }
+
 
 .card__image {
   width: 100%;
