create a video card and video card group and bring both card types more inline with eachother

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/card-group/_card-group.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/card-group/_card-group.scss
@@ -16,11 +16,11 @@
       
       &:nth-child(1):nth-last-child(1) {
         flex: 0 1 100%;
-        flex-direction: row;
-        align-items: stretch;
         
-        .card__image-link {
-          width: 30%;
+        &.card--simple,
+        .card__link {
+          flex-direction: row;
+          align-items: stretch;
         }
         
         .card__content {
@@ -28,7 +28,8 @@
         }
         
         .card__image {
-          height: 100%;
+          height: auto;
+          width: 30%;
         }
       }
     }
