--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
@@ -1,15 +1,66 @@
 .card {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   background-color: $white;
   box-shadow: $shadow;
   border-radius: 0 0 $rd-brd-lg $rd-brd-lg;
   margin-bottom: 1em;
   border-top: 6px solid $trust;
-
-  &.card--image {
+  
+  &.card--simple {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-decoration: none;
+  }
+  
+  &.card--simple.card--image,
+  &.card--simple.card--video {
     justify-content: flex-start;
+  }
+}
+
+.card__link {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-decoration: none;
+  
+  .card--image &,
+  .card--video & {
+    justify-content: flex-start;
+  }
+  
+  .card__title,
+  .card__desc {
+    color: $gray-dark;
+  }
+  
+  &:active,
+  &:hover,
+  &:focus {
+    text-decoration: none;
+    
+    .card__title {
+      color: $gray-dark;
+      text-decoration: underline;
+    }
+    
+    .card__desc,
+    .card__meta {
+      color: $gray-dark;
+      text-decoration: none;
+    }
+    
+    .card__cta {
+      text-decoration: underline;
+    }
+    
+    .card__image {
+      img {
+        transition: all 1s ease;
+        transform: scale(1.05);
+      }
+    }
   }
 }
 
@@ -20,6 +71,7 @@
   overflow: hidden;
   
   img {
+    transition: all .5s ease;
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -52,6 +104,13 @@
     color: $trust-aa;
     text-decoration: underline;
   }
+}
+
+.card__meta {
+  @include adjust-font-size-to($label, .9);
+  display: block;
+  margin-bottom: .25em;
+  font-style: italic;
 }
 
 .card__desc {
