--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/sidebar-card/card--sidebar.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/sidebar-card/card--sidebar.twig
@@ -1,7 +1,9 @@
 <div class="card card--sidebar js-section-animation">
-  <h2 class="card__title"><a href="{{ cta.url }}">{{ title }}</a></h2>
-  <div class="card__desc">
-    {{ desc }}
-  </div>
-  <a class="card__cta" href="{{ cta.url }}">{{ cta.label }}</a>
+  <a class="card__link" href="{{ cta.url }}">
+    <h2 class="card__title">{{ title }}</h2>
+    <div class="card__desc">
+      {{ desc }}
+    </div>
+    <span class="card__cta">{{ cta.label }}</span>
+  </a>
 </div>
