create article card variant, and move all card scss into the cards partial

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/card-group/_card-group.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/card-group/_card-group.scss
@@ -23,7 +23,8 @@
           align-items: stretch;
         }
         
-        .card__content {
+        .card--image .card__content,
+        .card--video .card__content {
           width: 70%;
         }
         
