--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
@@ -31,7 +31,8 @@
   }
   
   .card__title,
-  .card__desc {
+  .card__desc,
+  .card__meta {
     color: $gray-dark;
   }
   
@@ -64,7 +65,6 @@
   }
 }
 
-
 .card__image {
   width: 100%;
   height: 200px;
@@ -90,7 +90,7 @@
 .card__title {
   @include adjust-font-size-to($md-heading, 1.25);
   margin-top: 0;
-  margin-bottom: .25em;
+  margin-bottom: 0;
   
   a:link,
   a:visited {
@@ -115,6 +115,7 @@
 
 .card__desc {
   @include adjust-font-size-to($sm-text, .9);
+  margin-top: .25em;
 }
 
 .card__cta {
@@ -124,6 +125,63 @@
   text-decoration: none;
 }
 
+// article cards
+.card--article {
+  border-color: $primary-dark;
+}
+
+// video cards
+.card--video {
+  text-decoration: none;
+  border-top: 6px solid $growth;
+  
+  &:active,
+  &:hover,
+  &:focus {
+    
+    .card--video__image {      
+      
+      &::after {
+        transition: all .5s ease;
+        opacity: 1;
+      }
+    }
+  }
+}
+
+.card--video__image {
+  position: relative;
+  overflow: hidden;
+  
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+    background: url(/pattern-lab/public/images/play.svg);
+    background-size: 70px 70px;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: .75;
+    transition: all .5s ease;
+  }
+}
+
+// sidebar cards
+.card--sidebar {
+  padding: 1.5em;
+  
+  .card__title {
+    @include adjust-font-size-to($sm-heading, 1.15);
+  }
+}
+
+// animations
 .cssanimations {
   .card {
     opacity: 0;
@@ -132,4 +190,12 @@
   .card.in-view {
     animation: fadeInUp .5s ease .25s forwards;
   }
+  
+  .card.card--sidebar.in-view {
+    
+    @include breakpoint($bp2) {
+      animation: fadeInRight .5s ease .25s forwards;
+    }
+  }
 }
+
