--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/section-menu/_section-menu.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/section-menu/_section-menu.scss
@@ -39,6 +39,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 2em;
+  margin-bottom: 2em;
 
   @include breakpoint($bp3) {
     display: block;
