adjust sizing and how box links are set up

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/_box-links.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/_box-links.scss
@@ -1,7 +1,7 @@
 .box-links {
   position: relative;
   background: linear-gradient(to top, transparent, transparent 10%, $trust-ltst 10%, $trust-ltst 90%, transparent 90%, transparent);
-  margin: 4em 0;
+  margin: 2em 0;
 }
 
 .box-links-wrapper {
@@ -14,18 +14,28 @@
 .box-link {
   width: 100%;
   margin-bottom: 1em;
-  min-height: 350px;
+  min-height: 300px;
   position: relative;
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding-bottom: 2em;
+  
+  text-decoration: none;
+  
   @include trans;
 
   @include breakpoint($bp3) {
-    width: 48%;
-    min-height: 400px;
+    width: 49%;
+    min-height: 350px;
   }
   
   &:hover,
   &:focus,
   &:active {
+    text-decoration: none;
+    
     .box-link__background {
       @include trans;
       transform: scale(1.05);
@@ -43,7 +53,7 @@
     }
     
     .box-link__text {
-      margin-bottom: 2em;
+      margin-bottom: 1em;
     }
     
     .box-link__content {
@@ -63,11 +73,6 @@
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: $rd-brd-sm;
-  
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  padding-bottom: 2em;
   
   &::before {
     content: '';
@@ -89,6 +94,7 @@
 }
 
 .box-link__content {
+  @include trans;
   display: flex;
   flex-direction: column;
   padding: 2em 0 0 2em;
@@ -110,7 +116,7 @@
 
 .box-link__text {
   color: $white;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
   
   @include breakpoint($bp3) {
     @include trans;
