--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/box-links.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/box-links.twig
@@ -2,15 +2,16 @@
   <div class="box-links-wrapper">
     {% for box in boxes %}
       <a class="box-link" href="{{ link.url }}">
-        <div class="box-link__background" style='background-image: url("{{ box.img.src }}");'>
-          <div class="box-link__content">
-            <h3 class="box-link__title">{{ box.title }}</h3>
-            <div class="box-link__text">
-              {{ box.text }}
-            </div>
-            <span class="box-link__cta">{{ box.link.text }}</span>
+        <div class="box-link__background" style='background-image: url("{{ box.img.src }}");'></div>
+        
+        <div class="box-link__content">
+          <h3 class="box-link__title">{{ box.title }}</h3>
+          <div class="box-link__text">
+            {{ box.text }}
           </div>
+          <span class="box-link__cta">{{ box.link.text }}</span>
         </div>
+        
       </a>
     {% endfor %}
   </div>
