create some md files

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/hours-block/hours-block.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/hours-block/hours-block.twig
@@ -5,5 +5,7 @@
       <li class="hours-block__day"><span>{{ hour.title }}:</span> {{ hour.hours }}</li>
     {% endfor %}
   </ul>
+  {% if text %}
   <span class="hours-block__text">{{ text }}</span>
+  {% endif %}
 </div>
