--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.twig
@@ -37,7 +37,7 @@
       <div class="location-hero__image">
         {% include "@molecules/image-background/image-background.twig" with {
           "img.src": img.src,
-          "img.src": img.alt,
+          "img.alt": img.alt,
           "classes": classes,
         } %}
       </div>
