--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/_site-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/_site-header.scss
@@ -258,7 +258,8 @@
   background: url('../pattern-lab/public/images/mytowerhealth-logo.svg');
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center 90%;
+  padding: 1em .5em 0 .5em;
 
   @include breakpoint(0 899px) {
     position: absolute;
@@ -270,12 +271,13 @@
   &:link,
   &:visited {
     color: transparent;
+    border-bottom: 1px solid transparent;
   }
 
   &:active,
   &:hover,
   &:focus {
-    transform: scale(1.05);
+    border-bottom: 1px solid $trust-aa;
   }
 }
 
