--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/_site-footer.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/_site-footer.scss
@@ -147,6 +147,17 @@
         span {
           display: block;
         }
+        
+        a:link,
+        a:visited {
+          text-decoration: none;
+        }
+        
+        a:active,
+        a:hover,
+        a:focus {
+          text-decoration: underline;
+        }
       }
 
       .footer__info__social {
