--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_01-main-menu-item.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_01-main-menu-item.scss
@@ -57,7 +57,10 @@
 
 .main-menu__item--secondary {
   .main-menu--sub-1 {
-    border-top: 2px solid $trust-aa;
+    
+    @include breakpoint($bp3) {
+      border-top: 2px solid $trust-aa; 
+    }
   }
 
   &:active,
