--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_02-main-menu-link.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_02-main-menu-link.scss
@@ -56,8 +56,7 @@
 .main-menu__link--sub {
   display: block;
   width: 100%;
-  padding-left: 1em;
-  padding-right: 1em;
+  padding: .5em 1em;
   font-weight: 300;
   text-decoration: none;
 
