reduce the space above title in the basic header

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
@@ -231,8 +231,15 @@
   }
 }
 
+.basic-header__title {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 .basic-header__lede {
   @include adjust-font-size-to($xs-heading, 1.1);
+  display: block;
+  margin-top: .5em;
 }
 
 .basic-header__cta {
