move drupal menu specific width classes to their own wrapper.

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/autocomplete-dropdown/_autocomplete.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/autocomplete-dropdown/_autocomplete.scss
@@ -19,10 +19,12 @@
   display: none;
   visibility: hidden;
 
-  &.drupal,
   &.is-active {
     display: block;
     visibility: visible;
+  }
+  
+  &.drupal.is-active {
     width: calc(100% - 175px - 1em) !important;
 
     @include breakpoint($bp3) {
