update banner message

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/banner-message/banner-message.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/banner-message/banner-message.twig
@@ -1,3 +1,3 @@
 <div class='banner-message{% if banner_type %} banner-message--{{ banner_type }}{% endif %}'>
-  {{ banner_text }}
+  {{ banner_text|raw }}
 </div>
