--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/banner-message/_banner-message.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/banner-message/_banner-message.scss
@@ -3,16 +3,14 @@
   margin: .5em 0 1em;
   padding: 1em;
   text-align: center;
-  background-color: $off-white;
+  background-color: rgba($ed, .5);
   border-radius: $rd-brd-lg;
   font-weight: 300;
   display: block;
   width: 100%;
   
   &--secondary {
-    background-color: transparent;
-    border: 4px solid $trust-ltst;
-    font-weight: 600;
+    background-color: $off-white;
   }
 }
 
