--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.twig
@@ -11,16 +11,20 @@
   <div class="teaser__content">
     <div class="teaser__content__info">
       <div class="teaser__section">
-        {% if address1 or address2 %}
+        {% if location.details.address1 or location.details.address2 %}
           <span class="teaser-label">Address</span>
           <span class="teaser__row">{{ location.details.address1 }}</span>
           <span class="teaser__row">{{ location.details.address2 }}</span>
+        {% endif %}
+        
+        {% if location.details.hours %}
+          <a class="teaser__row-link" href="{{ url }}">Hours</a>
         {% endif %}
       </div>
       <div class="teaser__section">
         {% if location.details.phone %}
           <span class="teaser-label">Phone</span>
-          {{ location.details.phone }}
+          <a href="tel:+1{{ location.details.phone }}">{{ location.details.phone }}</a>
         {% endif %}
         {% if location.details.fax %}
           <span class="teaser-label">Fax</span>
