--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
@@ -244,6 +244,17 @@
   @include breakpoint($bp3) {
     margin-bottom: .25em;
   }
+  
+  a:link,
+  a:visited {
+    text-decoration: none;
+  }
+  
+  a:active,
+  a:hover,
+  a:focus {
+    text-decoration: underline;
+  }
 
   .teaser--small & {
     .icon-button {
@@ -308,6 +319,12 @@
   &:first-child {
     margin-top: 0;
   }
+}
+
+.teaser__row-link {
+  @include adjust-font-size-to($sm-text, .9);
+  display: block;
+  margin-top: .5em;
 }
 
 .teaser-tag {
