--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/checkbox/_checkbox.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/checkbox/_checkbox.scss
@@ -25,7 +25,7 @@
 
     &:checked::after {
       position: absolute;
-      background: url('/pattern-lab/public/images/checkbox.svg');
+      background: url('../pattern-lab/public/images/checkbox.svg');
       background-size: contain;
       background-position: center;
       top: 1px;
