add an insurance filter

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/_forms.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/05-forms/_forms.scss
@@ -31,7 +31,7 @@
 
 %label,
 label {
-  @include adjust-font-size-to($label);
+  @include adjust-font-size-to($label, .7);
   font-weight: 500;
   color: $primary-dark;
   display: block;
