--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/form-section/_form-section.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/form-section/_form-section.scss
@@ -93,6 +93,16 @@
     }
   }
   
+  &--oneSixth {
+    @include breakpoint($bp3) {
+      width: 30%;
+    }
+    
+    @include breakpoint($bp4) {
+      width: 15.5%;
+    }
+  }
+  
   .form-item--inline {
     display: flex;
     margin-top: 1em;
