--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/provider-details/_provider-details.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/provider-details/_provider-details.scss
@@ -28,6 +28,10 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  
+  .button {
+    margin-bottom: .5em;
+  }
 }
 
 .provider-detail__item-label {
