--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-landing.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-landing.twig
@@ -28,6 +28,10 @@
     {% include "@molecules/menus/section-menu/section-menu.twig" with {
         items: section_items,
       } %}
+      
+    {% include "@molecules/sidebar-cta-list/sidebar-cta-list.twig" with {
+      cta_list: cta_list
+    }%}
   {% endblock %}
 
   {% block page_content %}
