--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
@@ -72,6 +72,7 @@
       width: 80%;
       padding-right: 28%;
       margin-top: .5em;
+      min-height: 450px;
     }
 
     @include breakpoint($bp4) {
