add robots to style guide

--- a/docroot/themes/custom/tower_health/components/_meta/_00-head.twig
+++ b/docroot/themes/custom/tower_health/components/_meta/_00-head.twig
@@ -4,7 +4,10 @@
     <title>{{ title }}</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-
+    
+    <!-- Styleguides should not be indexed by search engines. -->
+    <meta name="robots" content="none" />
+    
     <!-- Component styles -->
     <link rel="stylesheet" href="../../../../dist/style.css?{{ cacheBuster }}" media="all" />
     <!-- TH Adobe Font Code -->
