--- a/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
+++ b/docroot/themes/custom/tower_health/templates/content/node--profile--teaser.html.twig
@@ -79,9 +79,9 @@
       },
       "details": {
         "name": label,
-        "specialties": content.field_medical_specialties_ref,
-        "language": content.field_profile_languages,
-        "focus": content.field_area_interest_ref,
+        "specialties": specialties,
+        "language": languages,
+        "focus": focuses,
         "location": location,
         "rating": content.field_rating_overall.0['#markup'],
         "icon": icon_path,
