--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/card/_card.scss
@@ -163,7 +163,7 @@
     bottom: 0;
     height: 100%;
     width: 100%;
-    background: url(/pattern-lab/public/images/play.svg);
+    background: url(../pattern-lab/public/images/play.svg);
     background-size: 70px 70px;
     background-position: center;
     background-repeat: no-repeat;
